--- a/meet-irl/app/index.html
+++ b/meet-irl/app/index.html
@@ -22,6 +22,8 @@
     <script src="services/users/users.js"></script>
 
     <script src="components/users/users.js"></script>
+    <!--add our missingno component-->
+    <script src="components/missingno/missingno.js"></script>
 
     <script src="app.js"></script>
 </head>
