--- a/meet-irl/app/index.html
+++ b/meet-irl/app/index.html
@@ -28,6 +28,7 @@
     <!--add profile component-->
     <script src="components/profile/profile.js"></script>
     <script src="components/missingno/missingno.js"></script>
+    <script src="filters/capitalize/capitalize.js"></script>
 
     <script src="app.js"></script>
 
